<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_day"
        android:icon="@drawable/ic_round_wb_sunny_24"
        android:title="@string/title_day"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_night"
        android:icon="@drawable/ic_round_nights_stay_24"
        android:title="@string/title_night"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/title_favorite"
        app:showAsAction="ifRoom" />

</menu>