<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_round_share_24"
        android:title="@string/title_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add_favorite"
        android:icon="@drawable/ic_round_favorite_border_24"
        android:title="@string/add_favorite"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_remove_favorite"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/remove_favorite"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>