<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:minWidth="240dp"
        app:tabTextColor="@color/tab_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorColor="?attr/colorPrimary"
        app:tabIndicatorGravity="center"
        app:tabMode="fixed" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tab" />

</androidx.constraintlayout.widget.ConstraintLayout>